one-dto-mapper-derive/tests/compile_fail/with_fn_cant_use_both.stderr
error: Only one can be used: (with_fn, with_fn_ref) at age
 --> tests/compile_fail/with_fn_cant_use_both.rs:7:10
  |
7 | #[derive(From)]
  |          ^^^^
  |
  = note: this error originates in the derive macro `From` (in Nightly builds, run with -Z macro-backtrace for more info)
